app/assets/stylesheets/components/_navbar-top.scss
@media (max-width: 600px){
  #navbarSupportedContent{
    position: absolute;
    // top: 70px;
  }
}
// https://stackoverflow.com/questions/48037100/bootstrap-4-navbar-collapse-issue
// => prevents the bug of the bio logo to be displayed below the dropdown menu when on mobile

.navbartop {
  justify-content: space-between;
  background: $white;
  color: $green;
  height: 12vh;
}

.navbar-collapse {
  flex-grow: 0;
  justify-content: space-between;
  display: flex;
}

#logout-navbartop {
  height: 3vh;
  padding: 0% 1%;
}

#logo-goutsdfruits {
  height: 10vh;
  padding: 0% 1%;
}

#logo-agbio {
  height: 9vh;
  padding: 0% 1%;

}

.lien-navbar {
  color: $green;
  text-decoration: none;
  font-size: 1.5rem;
  padding-left: 2vw;
  padding-right: 2vw;
  &:hover {
    opacity: 0.80;
    transition: 100ms;
    text-decoration: none;
  }
}

.lien-navbar {
  a {
    color: $green;
    &:hover {
      opacity: 0.80;
      transition: 100ms;
    }
  }
}

